add new login logic
