# resources/model_login_req_data_attributes.go
@@ -21,12 +21,20 @@ var _ MappedNullable = &LoginReqDataAttributes{}
 
 // LoginReqDataAttributes struct for LoginReqDataAttributes
 type LoginReqDataAttributes struct {
-	// User email
+	// User email (required if username is not provided).
 	Email *string `json:"email,omitempty"`
-	// User username
+	// User username (required if email is not provided).
 	Username *string `json:"username,omitempty"`
-	// User password
+	// User password.
 	Password string `json:"password"`
+	// Unique identifier for the user's device.
+	FactoryId string `json:"factory_id"`
+	// Human-readable name for the user's device (e.g., 'iPhone 14').
+	DeviceName string `json:"device_name"`
+	// Operating system version of the user's device.
+	OsVersion string `json:"os_version"`
+	// IP address of the user's device.
+	IpAddress string `json:"ip_address"`
 }
 
 type _LoginReqDataAttributes LoginReqDataAttributes
@@ -35,9 +43,13 @@ type _LoginReqDataAttributes LoginReqDataAttributes
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewLoginReqDataAttributes(password string) *LoginReqDataAttributes {
+func NewLoginReqDataAttributes(password string, factoryId string, deviceName string, osVersion string, ipAddress string) *LoginReqDataAttributes {
 	this := LoginReqDataAttributes{}
 	this.Password = password
+	this.FactoryId = factoryId
+	this.DeviceName = deviceName
+	this.OsVersion = osVersion
+	this.IpAddress = ipAddress
 	return &this
 }
 
@@ -137,6 +149,102 @@ func (o *LoginReqDataAttributes) SetPassword(v string) {
 	o.Password = v
 }
 
+// GetFactoryId returns the FactoryId field value
+func (o *LoginReqDataAttributes) GetFactoryId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.FactoryId
+}
+
+// GetFactoryIdOk returns a tuple with the FactoryId field value
+// and a boolean to check if the value has been set.
+func (o *LoginReqDataAttributes) GetFactoryIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.FactoryId, true
+}
+
+// SetFactoryId sets field value
+func (o *LoginReqDataAttributes) SetFactoryId(v string) {
+	o.FactoryId = v
+}
+
+// GetDeviceName returns the DeviceName field value
+func (o *LoginReqDataAttributes) GetDeviceName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.DeviceName
+}
+
+// GetDeviceNameOk returns a tuple with the DeviceName field value
+// and a boolean to check if the value has been set.
+func (o *LoginReqDataAttributes) GetDeviceNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.DeviceName, true
+}
+
+// SetDeviceName sets field value
+func (o *LoginReqDataAttributes) SetDeviceName(v string) {
+	o.DeviceName = v
+}
+
+// GetOsVersion returns the OsVersion field value
+func (o *LoginReqDataAttributes) GetOsVersion() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.OsVersion
+}
+
+// GetOsVersionOk returns a tuple with the OsVersion field value
+// and a boolean to check if the value has been set.
+func (o *LoginReqDataAttributes) GetOsVersionOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.OsVersion, true
+}
+
+// SetOsVersion sets field value
+func (o *LoginReqDataAttributes) SetOsVersion(v string) {
+	o.OsVersion = v
+}
+
+// GetIpAddress returns the IpAddress field value
+func (o *LoginReqDataAttributes) GetIpAddress() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.IpAddress
+}
+
+// GetIpAddressOk returns a tuple with the IpAddress field value
+// and a boolean to check if the value has been set.
+func (o *LoginReqDataAttributes) GetIpAddressOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.IpAddress, true
+}
+
+// SetIpAddress sets field value
+func (o *LoginReqDataAttributes) SetIpAddress(v string) {
+	o.IpAddress = v
+}
+
 func (o LoginReqDataAttributes) MarshalJSON() ([]byte, error) {
 	toSerialize,err := o.ToMap()
 	if err != nil {
@@ -154,6 +262,10 @@ func (o LoginReqDataAttributes) ToMap() (map[string]interface{}, error) {
 		toSerialize["username"] = o.Username
 	}
 	toSerialize["password"] = o.Password
+	toSerialize["factory_id"] = o.FactoryId
+	toSerialize["device_name"] = o.DeviceName
+	toSerialize["os_version"] = o.OsVersion
+	toSerialize["ip_address"] = o.IpAddress
 	return toSerialize, nil
 }
 
@@ -163,6 +275,10 @@ func (o *LoginReqDataAttributes) UnmarshalJSON(data []byte) (err error) {
 	// that every required field exists as a key in the generic map.
 	requiredProperties := []string{
 		"password",
+		"factory_id",
+		"device_name",
+		"os_version",
+		"ip_address",
 	}
 
 	allProperties := make(map[string]interface{})
